@@ -22,6 +22,14 @@ Tests
 - Issue #19457: Fixed xmlcharrefreplace tests on wide build when tests are
   loaded from .py[co] files.
 
+Build
+-----
+
+- Issue #15663: Revert OS X installer built-in Tcl/Tk support for 2.7.6.
+  Some third-party projects, such as Matplotlib and PIL/Pillow,
+  depended on being able to build with Tcl and Tk frameworks in
+  /Library/Frameworks.
+
 
 What's New in Python 2.7.6 release candidate 1?
 ===============================================
